--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12173,3 +12173,53 @@ fieldset:disabled .btn {
   }
 }
 
+.btn-outline-pimary {
+  border: 1px solid #0282f9;
+  color: #fffff2;
+  background-color: transparent;
+  padding: 0.5rem 1rem;
+}
+
+header {
+  height: 300px;
+  background-image: url("https://pbs.twimg.com/media/D097EjrX0AIOX2f.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+header nav {
+  background-color: #0282f9;
+  padding: 0.5rem 0;
+  width: 50%;
+  margin-top: 22%;
+  border-radius: 0.3rem;
+}
+
+header nav img {
+  margin-right: 4rem;
+  width: 50px;
+  filter: drop-shadow(2px 4px 6px black);
+}
+
+header nav a {
+  text-decoration: none;
+  color: #fffff2 !important;
+}
+
+header nav .link_nav .active {
+  border-bottom: 3px solid #fffff2;
+}
+
+footer {
+  height: 100px;
+  background-image: url("https://www.dccomics.com/sites/all/themes/dc_comics_bp/images/footer-bg.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  color: #0282f9;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
