--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,7 +13,12 @@ $dc-text-white: #fffff2;
     padding: 0.5rem 1rem;
 }
 
+.bg_azure{
+    background-color: #0282f91a;
+}
+
 header {
+    position: relative;
     height: 300px;
 
     background-image: url("https://pbs.twimg.com/media/D097EjrX0AIOX2f.jpg");
@@ -22,6 +27,10 @@ header {
     background-position: center;
 
     nav {
+
+        position: absolute;
+        bottom: -1rem;
+
         background-color: $dc-primary;
         padding: 0.5rem 0;
 
