--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12173,6 +12173,10 @@ fieldset:disabled .btn {
   }
 }
 
+h1 {
+  color: #0282f9;
+}
+
 .btn-outline-pimary {
   border: 1px solid #0282f9;
   color: #fffff2;
@@ -12180,8 +12184,12 @@ fieldset:disabled .btn {
   padding: 0.5rem 1rem;
 }
 
-.bg_azure {
-  background-color: rgba(2, 130, 249, 0.1019607843);
+.bg_primary {
+  background-color: #e5e5e5;
+  border-radius: 0.3rem;
+  box-shadow: 0 0 10px grey;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 header {
@@ -12201,6 +12209,7 @@ header nav {
   width: 50%;
   margin-top: 22%;
   border-radius: 0.3rem;
+  box-shadow: 0 0 10px #4b4b4b;
 }
 
 header nav img {
@@ -12216,6 +12225,12 @@ header nav a {
 
 header nav .link_nav .active {
   border-bottom: 3px solid #fffff2;
+}
+
+main {
+  min-height: 100vh;
+  background-image: url("https://www.dccomics.com/sites/all/themes/dc_comics_bp/images/bg.jpg");
+  background-size: cover;
 }
 
 footer {
