--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,6 +6,10 @@ $dc-footer-bg: #303030;
 $dc-text-dark: #797979;
 $dc-text-white: #fffff2;
 
+h1{
+    color: $dc-primary;
+}
+
 .btn-outline-pimary {
     border: 1px solid $dc-primary;
     color: $dc-text-white;
@@ -13,8 +17,12 @@ $dc-text-white: #fffff2;
     padding: 0.5rem 1rem;
 }
 
-.bg_azure{
-    background-color: #0282f91a;
+.bg_primary{
+    background-color: #e5e5e5;
+    border-radius: 0.3rem;
+    box-shadow: 0 0 10px grey;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
 }
 
 header {
@@ -38,6 +46,8 @@ header {
         margin-top: 22%;
         border-radius: 0.3rem;
 
+        box-shadow: 0 0 10px #4b4b4b;
+
         img {
             margin-right: 4rem;
             width: 50px;
@@ -54,6 +64,12 @@ header {
             }
         }
     }
+}
+
+main{
+    min-height: 100vh;
+    background-image: url('https://www.dccomics.com/sites/all/themes/dc_comics_bp/images/bg.jpg');
+    background-size: cover;
 }
 
 footer {
